# arcana-rust

./: Cargo.toml
resources/templates/: index.jsp
src/: arcana_web_config.rs  controller.rs  extras.rs  main.rs
src/pricing/: jupiter_pricing_source.rs  pyth_pricing_source.rs
src/serum/: market.rs  market_builder.rs  order_book.rs  serum_manager.rs  serum_utils.rs
src/serum_dex/manager/: order_book_cache_manager.rs  serum_manger.rs
src/serum_dex/model/: market.rs  market_builder.rs  open_orders_account.rs  order.rs  order_book.rs  serum_utils.rs
src/strategies/: bot_manager.rs  open_book_bot.rs  strategy.rs
src/strategies/open_book/: open_book_spl_usdc.rs
